syntax = "proto3";

package resources.rector;

import "google/protobuf/duration.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/rector;rector";

message AppConfig {
  optional string version = 1;

  Auth auth = 2;
  Perms perms = 3;
  Website website = 4;
  JobInfo job_info = 5;
  UserTracker user_tracker = 6;
  Discord discord = 7;
}

message Auth {
  bool signup_enabled = 1;
  bool last_char_lock = 2;
}

message Perms {
 repeated Perm default = 1 [(validate.rules).repeated.max_items = 100];
}

message Perm {
  string category = 1 [(validate.rules).string.max_len = 128];
  string name = 2 [(validate.rules).string.max_len = 255];
}

message Website {
  Links links = 1;
  bool stats_page = 2;
}

message Links {
  optional string privacy_policy = 1 [(validate.rules).string.max_len = 255];
  optional string imprint = 2 [(validate.rules).string.max_len = 255];
}

message JobInfo {
  UnemployedJob unemployed_job = 1 [(validate.rules).message.required = true];
  repeated string public_jobs = 2 [(validate.rules).repeated.max_items = 100];
  repeated string hidden_jobs = 3 [(validate.rules).repeated.max_items = 100];
}

message UnemployedJob {
  string name = 1 [(validate.rules).string.max_len = 20];
  int32 grade = 2 [(validate.rules).int32.gte = 0];
}

message UserTracker {
  google.protobuf.Duration refresh_time = 1 [(validate.rules).duration = {
    required: true,
    lt:  {seconds: 60}
    gte: {nanos: 500000000},
  }];
  google.protobuf.Duration db_refresh_time = 2 [(validate.rules).duration = {
    required: true,
    lt:  {seconds: 60}
    gte: {nanos: 500000000},
  }];
  repeated string livemap_jobs = 3 [(validate.rules).repeated.max_items = 100];
}

message Discord {
  bool enabled = 1;
  google.protobuf.Duration sync_interval = 2 [(validate.rules).duration = {
    required: true,
    lt:  {seconds: 180000000},
    gte: {seconds: 60},
  }];
  optional string invite_url = 3 [(validate.rules).string.max_len = 255];
  repeated string ignored_jobs = 4 [(validate.rules).repeated.max_items = 100];
  optional DiscordBotPresence bot_presence = 5;
}

enum DiscordBotPresenceType {
  DISCORD_BOT_PRESENCE_TYPE_UNSPECIFIED = 0;
  DISCORD_BOT_PRESENCE_TYPE_GAME = 1;
  DISCORD_BOT_PRESENCE_TYPE_LISTENING = 2;
  DISCORD_BOT_PRESENCE_TYPE_STREAMING = 3;
  DISCORD_BOT_PRESENCE_TYPE_WATCH = 4;
}

message DiscordBotPresence {
  DiscordBotPresenceType type = 1;
  optional string status = 2;
  optional string url = 3;
}
